--- a/NodejsShopifyWebApp/package.json
+++ b/NodejsShopifyWebApp/package.json
@@ -27,6 +27,7 @@
     "next": "^9.1.7",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "store-js": "^2.0.4"
   }
 }
